--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -56,12 +56,13 @@
                     android:layout_marginTop="16dp"
                     android:layout_marginRight="26dp"
                     android:background="@drawable/background_edittext_gray"
+                    android:digits="0123456789"
                     android:ems="10"
                     android:fontFamily="@font/iranyekanmedium"
                     android:hint="نام کاربری"
-                    android:inputType="text"
+                    android:inputType="phone"
                     android:paddingStart="10dp"
-                    android:textAlignment="textStart"
+                    android:textAlignment="viewStart"
                     android:textDirection="rtl"
                     android:textSize="12sp" />
 
@@ -77,11 +78,12 @@
 
                     android:background="@drawable/background_edittext_gray"
 
-                    android:fontFamily="@font/iranyekanmedium"
+                    android:digits="0123456789"
 
+                    android:fontFamily="@font/iranyekanmedium"
                     android:gravity="right|center_vertical"
                     android:hint="رمز عبور"
-                    android:inputType="textPassword"
+                    android:inputType="numberPassword"
                     android:paddingStart="10dp"
                     android:textDirection="rtl"
                     android:textSize="12sp" />
