--- a/app/src/main/res/layout/activity_remember_password.xml
+++ b/app/src/main/res/layout/activity_remember_password.xml
@@ -56,10 +56,11 @@
                     android:layout_marginTop="16dp"
                     android:layout_marginRight="26dp"
                     android:background="@drawable/background_edittext_gray"
+                    android:digits="0123456789"
                     android:ems="10"
                     android:fontFamily="@font/iranyekanmedium"
                     android:hint="شماره همراه"
-                    android:inputType="text"
+                    android:inputType="phone"
                     android:maxLength="11"
                     android:paddingStart="10dp"
                     android:textAlignment="textStart"
