--- a/app/src/main/res/layout/viewholder_comment2.xml
+++ b/app/src/main/res/layout/viewholder_comment2.xml
@@ -24,6 +24,36 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/t2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp"
+                android:layout_weight="1"
+                android:fontFamily="@font/iranyekanmedium"
+                android:text="TextView"
+                android:textColor="@color/blue_grey_600"
+                android:textSize="12sp" />
+
+            <TextView
+                android:id="@+id/t1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp"
+                android:layout_weight="1"
+                android:fontFamily="@font/iranyekanmedium"
+                android:text="TextView"
+                android:textColor="@color/blue_grey_600"
+                android:textDirection="rtl"
+                android:textSize="12sp" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:layout_marginStart="10dp"
             android:layout_marginTop="10dp"
             android:layout_marginEnd="10dp"
