--- a/app/src/main/res/layout/activity_send_banner.xml
+++ b/app/src/main/res/layout/activity_send_banner.xml
@@ -754,6 +754,33 @@
 
                     </LinearLayout>
 
+                    <LinearLayout
+                        android:id="@+id/teacherswitchlayout"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_marginStart="10dp"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginEnd="10dp"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:id="@+id/textView19"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center_vertical"
+                            android:layout_marginStart="10dp"
+                            android:layout_weight="1"
+                            android:fontFamily="@font/iranyekanmedium"
+                            android:text="فقط مختص دبیران"
+                            android:textColor="@color/grey_600" />
+
+                        <Switch
+                            android:id="@+id/switch11"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginEnd="10dp" />
+
+                    </LinearLayout>
 
                     <View
                         android:id="@+id/view9"
