--- a/app/src/main/res/layout/activity_send_category.xml
+++ b/app/src/main/res/layout/activity_send_category.xml
@@ -235,6 +235,37 @@
 
                     </LinearLayout>
 
+
+                    <LinearLayout
+                        android:id="@+id/teacherswitchlayout"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_marginStart="10dp"
+                        android:layout_marginTop="15dp"
+                        android:layout_marginEnd="10dp"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:id="@+id/textView19"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center_vertical"
+                            android:layout_marginStart="10dp"
+                            android:layout_weight="1"
+                            android:fontFamily="@font/iranyekanwebregular"
+                            android:text="فقط مختص دبیران"
+                            android:textColor="@color/grey_600" />
+
+                        <Switch
+                            android:id="@+id/switch10"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginEnd="10dp" />
+
+                    </LinearLayout>
+
+
+
                     <LinearLayout
                         android:id="@+id/sendBtn"
                         android:layout_width="match_parent"
