--- a/app/src/main/res/layout/activity_send_post.xml
+++ b/app/src/main/res/layout/activity_send_post.xml
@@ -188,7 +188,8 @@
                         android:layout_height="300dp"
                         android:layout_marginStart="10dp"
                         android:layout_marginEnd="10dp"
-                        android:background="@drawable/background_insert_ads">
+                        android:background="@drawable/background_insert_ads"
+                     >
 
                         <androidx.constraintlayout.widget.ConstraintLayout
                             android:id="@+id/constraintLayout3"
@@ -234,7 +235,8 @@
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
-                            app:layout_constraintTop_toBottomOf="@+id/constraintLayout3">
+                            app:layout_constraintTop_toBottomOf="@+id/constraintLayout3"
+                          >
 
                             <com.github.irshulx.Editor
                                 android:id="@+id/editor"
@@ -332,7 +334,7 @@
                                     android:fontFamily="@font/casablanca"
                                     android:text="دسترسی"
                                     android:textColor="#ffffff"
-                                    android:textSize="16sp" />
+                                    android:textSize="14sp" />
 
                                 <View
                                     android:id="@+id/view8"
@@ -416,7 +418,7 @@
                                     android:fontFamily="@font/casablanca"
                                     android:text="دسته بندی"
                                     android:textColor="#ffffff"
-                                    android:textSize="16sp" />
+                                    android:textSize="14sp" />
 
                                 <View
                                     android:id="@+id/view10"
@@ -488,7 +490,7 @@
                                     android:fontFamily="@font/casablanca"
                                     android:text="آیکون"
                                     android:textColor="#ffffff"
-                                    android:textSize="16sp" />
+                                    android:textSize="14sp" />
 
                                 <View
                                     android:id="@+id/view8"
@@ -544,9 +546,9 @@
                                     android:layout_marginStart="10dp"
                                     android:layout_weight="1"
                                     android:fontFamily="@font/casablanca"
-                                    android:text="تخصیص به گروه"
+                                    android:text="تخصیص به گروه دانش آموزان"
                                     android:textColor="#ffffff"
-                                    android:textSize="16sp" />
+                                    android:textSize="14sp" />
 
                                 <View
                                     android:id="@+id/view8"
@@ -635,7 +637,7 @@
                                     android:fontFamily="@font/casablanca"
                                     android:text="تخصیص به افراد"
                                     android:textColor="#ffffff"
-                                    android:textSize="16sp" />
+                                    android:textSize="14sp" />
 
                                 <View
                                     android:id="@+id/view8"
@@ -700,10 +702,10 @@
                             android:layout_margin="10dp"
                             android:layout_weight="0.5"
                             android:orientation="vertical"
-                            android:visibility="invisible">
+                            android:visibility="visible">
 
                             <LinearLayout
-                                android:id="@+id/categoryBtn"
+                                android:id="@+id/takhsisGroupTeacherBtn"
                                 android:layout_width="match_parent"
                                 android:layout_height="40dp"
                                 android:background="@drawable/background_button_message_orange2"
@@ -717,12 +719,12 @@
                                     android:layout_marginStart="10dp"
                                     android:layout_weight="1"
                                     android:fontFamily="@font/casablanca"
-                                    android:text="دسته بندی"
+                                    android:text="تخصیص به گروه معلمان"
                                     android:textColor="#ffffff"
-                                    android:textSize="16sp" />
+                                    android:textSize="14sp" />
 
                                 <View
-                                    android:id="@+id/view10"
+                                    android:id="@+id/view8"
                                     android:layout_width="1dp"
                                     android:layout_height="match_parent"
                                     android:layout_marginStart="5dp"
@@ -737,7 +739,7 @@
                                     app:layout_constraintTop_toTopOf="parent" />
 
                                 <ImageView
-                                    android:id="@+id/sub_toggle_button_category"
+                                    android:id="@+id/sub_toggle_button_takhsis_groups_teacher"
                                     android:layout_width="24dp"
                                     android:layout_height="24dp"
                                     android:layout_alignTop="@+id/defect_checkBox"
@@ -752,13 +754,206 @@
                             </LinearLayout>
 
                             <androidx.recyclerview.widget.RecyclerView
-                                android:id="@+id/viewPostion2"
+                                android:id="@+id/viewtakhsisgroupTeacher"
                                 android:layout_width="match_parent"
-                                android:layout_height="match_parent"
+                                android:layout_height="wrap_content"
                                 android:layout_marginTop="10dp"
                                 android:visibility="gone" />
 
+                            <ProgressBar
+                                android:id="@+id/progressBarRow4"
+                                style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Small"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_centerHorizontal="true"
+                                android:layout_centerVertical="true"
+                                android:layout_gravity="center"
+                                android:layout_marginStart="8dp"
+                                android:layout_marginTop="8dp"
+                                android:layout_marginEnd="8dp"
+                                android:layout_marginBottom="8dp"
+                                android:visibility="gone"
+                                app:layout_constraintBottom_toBottomOf="parent"
+                                app:layout_constraintEnd_toEndOf="@+id/View1"
+                                app:layout_constraintStart_toStartOf="parent"
+                                app:layout_constraintTop_toTopOf="@+id/View1"
+                                tools:visibility="visible" />
                         </LinearLayout>
+
+                    </LinearLayout>
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:orientation="horizontal">
+
+                        <LinearLayout
+                            android:layout_width="0dp"
+                            android:layout_height="match_parent"
+                            android:layout_margin="10dp"
+                            android:layout_weight="0.5"
+                            android:orientation="vertical"
+                            android:visibility="visible">
+
+                            <LinearLayout
+                                android:id="@+id/takhsisTeacherBtn"
+                                android:layout_width="match_parent"
+                                android:layout_height="40dp"
+                                android:background="@drawable/background_button_message_orange2"
+                                android:orientation="horizontal">
+
+                                <TextView
+                                    android:id="@+id/textView23"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:layout_gravity="center_vertical"
+                                    android:layout_marginStart="10dp"
+                                    android:layout_weight="1"
+                                    android:fontFamily="@font/casablanca"
+                                    android:text="تخصیص به معلمان"
+                                    android:textColor="#ffffff"
+                                    android:textSize="14sp" />
+
+                                <View
+                                    android:id="@+id/view8"
+                                    android:layout_width="1dp"
+                                    android:layout_height="match_parent"
+                                    android:layout_marginStart="5dp"
+                                    android:layout_marginTop="10dp"
+                                    android:layout_marginEnd="5dp"
+                                    android:layout_marginBottom="10dp"
+                                    android:alpha="0.7"
+                                    android:background="#ffffff"
+                                    android:visibility="visible"
+                                    app:layout_constraintEnd_toEndOf="parent"
+                                    app:layout_constraintStart_toStartOf="parent"
+                                    app:layout_constraintTop_toTopOf="parent" />
+
+                                <ImageView
+                                    android:id="@+id/sub_toggle_button_takhsis_Teacher"
+                                    android:layout_width="24dp"
+                                    android:layout_height="24dp"
+                                    android:layout_alignTop="@+id/defect_checkBox"
+                                    android:layout_alignBottom="@+id/defect_checkBox"
+                                    android:layout_alignParentEnd="true"
+                                    android:layout_marginTop="7dp"
+                                    android:layout_marginEnd="10dp"
+                                    android:layout_marginBottom="11dp"
+                                    android:visibility="visible"
+                                    app:srcCompat="@drawable/ic_expand_less" />
+
+                            </LinearLayout>
+
+                            <androidx.recyclerview.widget.RecyclerView
+                                android:id="@+id/viewtakhsisTeacher"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_marginTop="10dp"
+                                android:visibility="gone" />
+
+                            <ProgressBar
+                                android:id="@+id/progressBarRow5"
+                                style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Small"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_centerHorizontal="true"
+                                android:layout_centerVertical="true"
+                                android:layout_gravity="center"
+                                android:layout_marginStart="8dp"
+                                android:layout_marginTop="8dp"
+                                android:layout_marginEnd="8dp"
+                                android:layout_marginBottom="8dp"
+                                android:visibility="gone"
+                                app:layout_constraintBottom_toBottomOf="parent"
+                                app:layout_constraintEnd_toEndOf="@+id/View1"
+                                app:layout_constraintStart_toStartOf="parent"
+                                app:layout_constraintTop_toTopOf="@+id/View1"
+                                tools:visibility="visible" />
+                        </LinearLayout>
+
+                        <LinearLayout
+                            android:layout_width="0dp"
+                            android:layout_height="match_parent"
+                            android:layout_margin="10dp"
+                            android:layout_weight="0.5"
+                            android:orientation="vertical"
+                            android:visibility="invisible">
+
+                            <LinearLayout
+                                android:id="@+id/takhsisGroupTeacherBtn2"
+                                android:layout_width="match_parent"
+                                android:layout_height="40dp"
+                                android:background="@drawable/background_button_message_orange2"
+                                android:orientation="horizontal">
+
+                                <TextView
+                                    android:id="@+id/textView23"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:layout_gravity="center_vertical"
+                                    android:layout_marginStart="10dp"
+                                    android:layout_weight="1"
+                                    android:fontFamily="@font/casablanca"
+                                    android:text="تخصیص به گروه معلمان"
+                                    android:textColor="#ffffff"
+                                    android:textSize="14sp" />
+
+                                <View
+                                    android:id="@+id/view8"
+                                    android:layout_width="1dp"
+                                    android:layout_height="match_parent"
+                                    android:layout_marginStart="5dp"
+                                    android:layout_marginTop="10dp"
+                                    android:layout_marginEnd="5dp"
+                                    android:layout_marginBottom="10dp"
+                                    android:alpha="0.7"
+                                    android:background="#ffffff"
+                                    android:visibility="visible"
+                                    app:layout_constraintEnd_toEndOf="parent"
+                                    app:layout_constraintStart_toStartOf="parent"
+                                    app:layout_constraintTop_toTopOf="parent" />
+
+                                <ImageView
+                                    android:id="@+id/sub_toggle_button_takhsis_groups_teache2r"
+                                    android:layout_width="24dp"
+                                    android:layout_height="24dp"
+                                    android:layout_alignTop="@+id/defect_checkBox"
+                                    android:layout_alignBottom="@+id/defect_checkBox"
+                                    android:layout_alignParentEnd="true"
+                                    android:layout_marginTop="7dp"
+                                    android:layout_marginEnd="10dp"
+                                    android:layout_marginBottom="11dp"
+                                    android:visibility="visible"
+                                    app:srcCompat="@drawable/ic_expand_less" />
+
+                            </LinearLayout>
+
+                            <androidx.recyclerview.widget.RecyclerView
+                                android:id="@+id/viewtakhsisgroupTeacher2"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_marginTop="10dp"
+                                android:visibility="gone" />
+
+                            <ProgressBar
+                                android:id="@+id/progressBarRow43"
+                                style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Small"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_centerHorizontal="true"
+                                android:layout_centerVertical="true"
+                                android:layout_gravity="center"
+                                android:layout_marginStart="8dp"
+                                android:layout_marginTop="8dp"
+                                android:layout_marginEnd="8dp"
+                                android:layout_marginBottom="8dp"
+                                android:visibility="gone"
+                                app:layout_constraintBottom_toBottomOf="parent"
+                                app:layout_constraintEnd_toEndOf="@+id/View1"
+                                app:layout_constraintStart_toStartOf="parent"
+                                app:layout_constraintTop_toTopOf="@+id/View1"
+                                tools:visibility="visible" />
+                        </LinearLayout>
+
                     </LinearLayout>
                     <View
                         android:id="@+id/view7"
