--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -47,7 +47,7 @@
                     <androidx.constraintlayout.widget.ConstraintLayout
                         android:id="@+id/linearLayout"
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent"
+                        android:layout_height="wrap_content"
                         android:orientation="vertical"
                         android:visibility="visible"
                         app:layout_constraintBottom_toBottomOf="parent"
@@ -57,7 +57,7 @@
                             android:id="@+id/constraintLayout4"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_marginTop="80dp"
+                            android:layout_marginTop="100dp"
                             android:background="@drawable/background_button_gradiunt_blue"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
@@ -329,6 +329,10 @@
                         <androidx.constraintlayout.widget.ConstraintLayout
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
+                            android:layout_marginStart="16dp"
+                            android:layout_marginTop="32dp"
+                            android:layout_marginEnd="16dp"
+                            android:layout_marginBottom="16dp"
                             app:layout_constraintBottom_toTopOf="@+id/constraintLayout4"
                             app:layout_constraintEnd_toEndOf="@+id/constraintLayout4"
                             app:layout_constraintStart_toStartOf="@+id/constraintLayout4"
